# autonomousCarAssignment

./: README.md  kitti_yolo.launch  kitti_yolo_predictor.launch
kitti_loader/: CMakeLists.txt  package.xml
kitti_loader/launch/: test_kitti.launch
kitti_loader/scripts/: kitti_loader.py
predictor/: CMakeLists.txt  package.xml
predictor/launch/: predictor.launch
predictor/scripts/: predictor.py
